<resources>
    <string name="app_name">Chomp</string>
    <string name="create_an_account">Create an Account</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="button">Button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="household">Household</string>
    <string name="welcome_do_you_have_a_group_or_would_like_to_invite_a_group">Welcome, do you have a group or would like to invite a group?</string>
    <string name="skip">Skip</string>
    <string name="i_have_a_code">I have a code!</string>
    <string name="invite">Invite</string>
    <string name="milk">Milk</string>
    <string name="more_info">more info</string>
    <string name="food_item_information">Food item information</string>
    <string name="enter_code">Enter Code</string>
    <string name="add_pantry_item">Add Pantry Item</string>
    <string name="close_window">close window</string>
    <string name="apples">Apples</string>
    <string name="_1">1</string>
    <string name="quantity">QUANTITY</string>
    <string name="add_new">Add New</string>
    <string name="storage_location">STORAGE LOCATION</string>
    <string name="notes">NOTES</string>
    <string name="expiration_date">EXPIRATION DATE:</string>
    <string name="item_name">ITEM NAME</string>
    <string name="brand">BRAND</string>
    <string name="image_of_food_item">image of food item</string>
    <string name="pantry">Pantry</string>
    <string name="shopping_list">Shopping List</string>
    <string name="item">Item</string>
    <string name="add">Add</string>
    <string name="errorStorageSelection">Please Choose a Location</string>
    <string name="errorExpirySelection">Please Choose an Expiration Date</string>
    <string name="my_kitchen">My Kitchen</string>
    <string name="name">Name</string>
    <string name="update">Update</string>
    <string name="unit">UNIT</string>
    <string name="cancel">Cancel</string>
    <string name="add_new_storage_location">Add New Storage Location</string>
    <string name="add_storage_location">Add Storage Location</string>
    <string name="e_g_cupboard">e.g. Cupboard</string>
    <string name="going_bad_soon">Going Bad Soon</string>
    <string name="next">Next</string>
    <string name="take_photo_of_food_item">take photo of food item</string>
    <string name="get_image_from_gallery">get image from gallery</string>
    <string name="welcome">Welcome!</string>
    <string name="one_moment_to_set_up_your_account">One moment to set up your account...</string>
    <string name="the_pantry_app_n_keep_track_of_what_you_have">The pantry app.\n Keep track of what you have.</string>
    <string name="chomp">Chomp</string>
</resources>