<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dev.kallytang.chompalpha.AccountSetUpActivity">

    <TextView
        android:id="@+id/et_welcome_title"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/welcome_do_you_have_a_group_or_would_like_to_invite_a_group"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/invite_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:background="@drawable/button_not_clicked"
        android:text="@string/invite"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/add_code_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_welcome_title" />

    <Button
        android:id="@+id/add_code_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_not_clicked"
        android:text="@string/enter_code"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/skip_group_setup_btn"
        app:layout_constraintEnd_toEndOf="@+id/invite_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/invite_btn"
        app:layout_constraintTop_toBottomOf="@+id/invite_btn" />

    <Button
        android:id="@+id/skip_group_setup_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/button_not_clicked"
        android:text="@string/skip"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/add_code_btn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/add_code_btn"
        app:layout_constraintTop_toBottomOf="@+id/add_code_btn"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>